[gd_scene load_steps=25 format=3 uid="uid://kgm316n86oeq"]

[ext_resource type="Script" path="res://src/scripts/Puzzle 1/Puzzle1.gd" id="1_g4l56"]
[ext_resource type="Texture2D" uid="uid://cpyowiueotikd" path="res://src/art/Main and Puzzle Select/Puzzle Select/Puzzle_Select_Elements-1.png" id="2_6h6du"]
[ext_resource type="Texture2D" uid="uid://dfbbfxwtlx2sp" path="res://src/art/Main and Puzzle Select/Puzzle 5/Puzzle 5 Indicator.png" id="3_3w1u2"]
[ext_resource type="Texture2D" uid="uid://cgqjij2g8o47i" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_HomeBtn_Normal.png" id="4_680x2"]
[ext_resource type="Texture2D" uid="uid://475uhstd1i6a" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_HomeBtn_Clicked.png" id="5_jh65x"]
[ext_resource type="Texture2D" uid="uid://du3kls6hqnyjt" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_HomeBtn_Selected.png" id="6_j3g3c"]
[ext_resource type="Texture2D" uid="uid://fuwbcduqwn3y" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_ConfirmBtn_Normal.png" id="7_qqu4s"]
[ext_resource type="Texture2D" uid="uid://hsy0x5k6md1t" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_ConfirmBtn_Clicked.png" id="8_ccfvj"]
[ext_resource type="Texture2D" uid="uid://c60a1ysuwtits" path="res://src/art/Main and Puzzle Select/Puzzle 1/Puzzle_ConfirmBtn_Selected.png" id="9_rp1sl"]
[ext_resource type="Texture2D" uid="uid://gd0qcemqdlii" path="res://src/art/Main and Puzzle Select/Puzzle 1/InfoBtn_Normal.png" id="10_htqga"]
[ext_resource type="Texture2D" uid="uid://wa262r6jtxsi" path="res://src/art/Main and Puzzle Select/Puzzle 1/InfoBtn_Clicked.png" id="11_4sr1b"]
[ext_resource type="Texture2D" uid="uid://rxwacwm75vg5" path="res://src/art/Main and Puzzle Select/Puzzle 1/InfoBtn_Selected.png" id="12_4d06t"]
[ext_resource type="Texture2D" uid="uid://cn17xogji8mmu" path="res://src/art/Main and Puzzle Select/Puzzle 1/HintBtn_Normal.png" id="13_2t6uf"]
[ext_resource type="Texture2D" uid="uid://dc7v14y7n0j45" path="res://src/art/Main and Puzzle Select/Puzzle 1/HintBtn_Clicked.png" id="14_87unm"]
[ext_resource type="Texture2D" uid="uid://k3jaoylpso1q" path="res://src/art/Main and Puzzle Select/Puzzle 1/HintBtn_Selected.png" id="15_tl50g"]
[ext_resource type="Texture2D" uid="uid://cmp1nlgjpx3fv" path="res://src/art/Main and Puzzle Select/Puzzle 1/UndoBtn_Normal.png" id="16_ym7h8"]
[ext_resource type="Texture2D" uid="uid://cr0xq7frplu8l" path="res://src/art/Main and Puzzle Select/Puzzle 1/UndoBtn_Clicked.png" id="17_846xd"]
[ext_resource type="Texture2D" uid="uid://bdrqdfwqi23wc" path="res://src/art/Main and Puzzle Select/Puzzle 1/UndoBtn_Selected.png" id="18_evu0f"]
[ext_resource type="Texture2D" uid="uid://q5bgyubyxf20" path="res://src/art/Main and Puzzle Select/Puzzle 1/RedoBtn_Normal.png" id="19_dmhb3"]
[ext_resource type="Texture2D" uid="uid://b4wk3y71qgni1" path="res://src/art/Main and Puzzle Select/Puzzle 1/RedoBtn_Clicked.png" id="20_dmnau"]
[ext_resource type="Texture2D" uid="uid://bdhtfj0nyogas" path="res://src/art/Main and Puzzle Select/Puzzle 1/RedoBtn_Selected.png" id="21_mdlv1"]
[ext_resource type="Texture2D" uid="uid://c7rxemp8euioy" path="res://src/art/Main and Puzzle Select/Puzzle 1/RefreshBtn_Normal.png" id="22_itlmh"]
[ext_resource type="Texture2D" uid="uid://c4jtrmbxiv6n1" path="res://src/art/Main and Puzzle Select/Puzzle 1/RefreshBtn_Clicked.png" id="23_t0338"]
[ext_resource type="Texture2D" uid="uid://cafg38eegiwk8" path="res://src/art/Main and Puzzle Select/Puzzle 1/RefreshBtn_Selected.png" id="24_go1p5"]

[node name="Puzzle5" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4l56")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6h6du")
expand_mode = 1

[node name="WebTemplate" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3w1u2")
expand_mode = 1
stretch_mode = 4

[node name="Home_Confirm_Btn" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1538.0
offset_top = 959.0
offset_right = -35.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Home_Confirm_Btn"]
layout_mode = 2
columns = 2

[node name="HomeBtn" type="TextureButton" parent="Home_Confirm_Btn/GridContainer"]
custom_minimum_size = Vector2(175, 75)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("4_680x2")
texture_pressed = ExtResource("5_jh65x")
texture_hover = ExtResource("6_j3g3c")
ignore_texture_size = true
stretch_mode = 4

[node name="ConfirmBtn" type="TextureButton" parent="Home_Confirm_Btn/GridContainer"]
custom_minimum_size = Vector2(175, 75)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("7_qqu4s")
texture_pressed = ExtResource("8_ccfvj")
texture_hover = ExtResource("9_rp1sl")
ignore_texture_size = true
stretch_mode = 4

[node name="Info_Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1324.0
offset_top = 141.0
offset_right = -459.0
offset_bottom = -871.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoHintContainer" type="GridContainer" parent="Info_Container"]
clip_contents = true
layout_direction = 3
layout_mode = 2
columns = 2

[node name="InfoBtn" type="TextureButton" parent="Info_Container/InfoHintContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("10_htqga")
texture_pressed = ExtResource("11_4sr1b")
texture_hover = ExtResource("12_4d06t")
ignore_texture_size = true
stretch_mode = 0

[node name="HintBtn" type="TextureButton" parent="Info_Container/InfoHintContainer"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("13_2t6uf")
texture_pressed = ExtResource("14_87unm")
texture_hover = ExtResource("15_tl50g")
ignore_texture_size = true
stretch_mode = 4

[node name="Edit_Container" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 251.0
offset_top = 146.0
offset_right = 438.0
offset_bottom = 210.0

[node name="GridContainer" type="GridContainer" parent="Edit_Container"]
layout_mode = 2
columns = 3

[node name="UndoBtn" type="TextureButton" parent="Edit_Container/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("16_ym7h8")
texture_pressed = ExtResource("17_846xd")
texture_hover = ExtResource("18_evu0f")
ignore_texture_size = true
stretch_mode = 4

[node name="RedoBtn" type="TextureButton" parent="Edit_Container/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("19_dmhb3")
texture_pressed = ExtResource("20_dmnau")
texture_hover = ExtResource("21_mdlv1")
ignore_texture_size = true
stretch_mode = 4

[node name="RefreshBtn" type="TextureButton" parent="Edit_Container/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource("22_itlmh")
texture_pressed = ExtResource("23_t0338")
texture_hover = ExtResource("24_go1p5")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="Home_Confirm_Btn/GridContainer/HomeBtn" to="." method="_on_home_btn_pressed"]
[connection signal="pressed" from="Home_Confirm_Btn/GridContainer/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="pressed" from="Info_Container/InfoHintContainer/InfoBtn" to="." method="_on_info_btn_pressed"]
